Previous session is restored even when a .blend file should be loaded #34896

Closed
opened 2013-04-06 06:31:16 +02:00 by inactive account · 4 comments

%%%I'm using the new session recovery feature of Blender 2.66 (ticked "Keep Session" in the user prefs).
When loading a file by double-clicking a .blend file, say "A.blend" I notice the following:

  1. quit.blend is loaded to recover the previous session.
  2. any auto-registering Python scripts in quit.blend are run. In my case it registered a file-specific operator and a file-specific GUI extension.
  3. A.blend is loaded from disk.
  4. A.blend is now loaded in Blender, with the UI extensions and operators of the previous file I had opened. Since they were very specific to the contents of that file, they are useless for A.blend.

Running Blender 2.66a on Windows 8, 64-bit.

Expected behaviour: either one of those two happens, but not both:

  • quit.blend is loaded to restore the session (when the CLI arguments contain no file to load)
  • the specified blend file is loaded

I have attached a file to demonstrate. Its auto-registering script just prints a banner to show that it's executing. To reproduce this behaviour:

  1. load the attached blend file
  2. quit blender
  3. open another file by specifying it on the CLI, double-clicking it in a file manager, etc.
  4. inspect the console output, it shows something like this:

Read new prefs: C:\Users\Sybren\AppData\Roaming\Blender Foundation\Blender\2.66
config\userpref.blend
[other startup messages]
read blend: C:\temp\quit.blend

This is an automatically running Python script

read blend: C:\workspace\rage\media\RAGE models\arrow.blend

%%%

%%%I'm using the new session recovery feature of Blender 2.66 (ticked "Keep Session" in the user prefs). When loading a file by double-clicking a .blend file, say "A.blend" I notice the following: 1) quit.blend is loaded to recover the previous session. 2) any auto-registering Python scripts in quit.blend are run. In my case it registered a file-specific operator and a file-specific GUI extension. 3) A.blend is loaded from disk. 4) A.blend is now loaded in Blender, with the UI extensions and operators of the previous file I had opened. Since they were very specific to the contents of that file, they are useless for A.blend. Running Blender 2.66a on Windows 8, 64-bit. Expected behaviour: either one of those two happens, but not both: - quit.blend is loaded to restore the session (when the CLI arguments contain no file to load) - the specified blend file is loaded I have attached a file to demonstrate. Its auto-registering script just prints a banner to show that it's executing. To reproduce this behaviour: 1) load the attached blend file 2) quit blender 3) open another file by specifying it on the CLI, double-clicking it in a file manager, etc. 4) inspect the console output, it shows something like this: Read new prefs: C:\Users\Sybren\AppData\Roaming\Blender Foundation\Blender\2.66\ config\userpref.blend [other startup messages] read blend: C:\temp\quit.blend ------------------------------------------------------------ This is an automatically running Python script ------------------------------------------------------------ read blend: C:\workspace\rage\media\RAGE models\arrow.blend %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed, it should skip the quit.blend obviously. Never tried this :) Goes to my fix list.%%%

%%%Confirmed, it should skip the quit.blend obviously. Never tried this :) Goes to my fix list.%%%
Member

%%%Bug has been fixed last week, I thought I closed it already :)%%%

%%%Bug has been fixed last week, I thought I closed it already :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34896
No description provided.